<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dialog_margin"
    android:orientation="vertical">
    <RadioGroup
        android:id="@+id/radio_color_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/dialog_margin">
        <RadioButton
            android:id="@+id/radio_color_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/white"
            />
        <RadioButton
            android:id="@+id/radio_color_yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yellow"
            />
        <RadioButton
            android:id="@+id/radio_color_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blue"
            />
        <RadioButton
            android:id="@+id/radio_color_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/green"
            />
        <RadioButton
            android:id="@+id/radio_color_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/red"
            />
        <RadioButton
            android:id="@+id/radio_color_orange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orange"
            />
        <RadioButton
            android:id="@+id/radio_color_purple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/purple"
            />
        <RadioButton
            android:id="@+id/radio_color_pink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pink"
            />
        <RadioButton
            android:id="@+id/radio_color_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gray"
            />
    </RadioGroup>

</LinearLayout>


<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/colorList"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        />-->
