<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.phroton.notes.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_archive"
        android:name="com.phroton.notes.ui.archive.ArchiveFragment"
        android:label="Archive"
        tools:layout="@layout/fragment_archive"
        />
    <fragment
        android:id="@+id/nav_trash"
        android:name="com.phroton.notes.ui.trash.TrashFragment"
        android:label="@string/trash"
        tools:layout="@layout/fragment_trash"
        />
    <fragment
        android:id="@+id/nav_tags"
        android:name="com.phroton.notes.ui.tags.TagFragment"
        android:label="@string/tags"
        tools:layout="@layout/fragment_tag_list"
        >
        <action
            android:id="@+id/action_tagFragment_to_taggedNoteFragment"
            app:destination="@id/nav_tagged_note"
            />
    </fragment>
    <fragment
        android:id="@+id/nav_tagged_note"
        android:name="com.phroton.notes.ui.taggednote.TaggedNoteFragment"
        android:label="@string/tagged_note"
        tools:layout="@layout/fragment_home"
        >
        <argument
            android:name="Tag"
            app:argType="com.phroton.notes.Tag"
            />

    </fragment>
</navigation>